<resources>
    <string name="app_name">Friend Finder</string>
    <string name="gps_title">GPS required</string>
    <string name="gps_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission_message">We need to access location permission to get current location</string>
    <string name="permission_required">Permission required</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="friends">Friends</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>