<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<item
android:id="@+id/main_item"
android:title="Main">
<menu>
    <item
        android:id="@+id/explore"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/explore"
        android:checkable="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/friends"
        android:icon="@drawable/baseline_group_24"
        android:title="@string/friends"
        android:checkable="true"
        app:showAsAction="ifRoom"/>
</menu>
</item>
<item
android:id="@+id/labels_item"
    android:title="@string/profile">
<menu>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        android:checkable="true"
        app:showAsAction="ifRoom"/>
</menu>
</item>

<item
    android:id="@+id/sign_out"
    android:icon="@drawable/baseline_arrow_back_24"
    android:title="@string/sign_out"
    android:checkable="true"
    app:showAsAction="ifRoom"/>
</menu>
